Add regression test for recipe tree cache

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,11 @@ http {
             add_header Cache-Control "public, max-age=2592000, stale-while-revalidate=2592000";
         }
 
+        # Proxy recipe tree API to Node backend
+        location /recipe-tree/ {
+            proxy_pass http://127.0.0.1:3000/recipe-tree/;
+        }
+
         # SPA fallback for other routes
         location / {
             try_files $uri $uri/ /index.html;
