Serve empty JS for missing modules

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,12 @@ http {
         location ^~ /dist/js/ {
             try_files $uri =404;
             default_type application/javascript;
+            error_page 404 = @js404;
+        }
+
+        location @js404 {
+            add_header Content-Type application/javascript;
+            return 404 "";
         }
 
         # Serve service worker directly without SPA fallback
