feat: disable html caching and refresh clients

--- a/nginx.conf
+++ b/nginx.conf
@@ -47,6 +47,7 @@ http {
 
         # SPA fallback for other routes
         location / {
+            add_header Cache-Control "no-cache";
             try_files $uri $uri/ /index.html;
         }
     }
