Move mime.types include into types block

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,8 @@
 http {
-    include       mime.types;
-    types { application/javascript js mjs; }
+    types {
+        include mime.types;
+        application/javascript js mjs;
+    }
 
     server {
         listen 80;
