--- a/nginx.conf
+++ b/nginx.conf
@@ -42,9 +42,9 @@ http {
             add_header Cache-Control "public, max-age=2592000, stale-while-revalidate=2592000";
         }
 
-        # Proxy recipe tree API to Node backend
+        # Route recipe tree API through PHP proxy
         location /recipe-tree/ {
-            proxy_pass http://127.0.0.1:3000/recipe-tree/;
+            proxy_pass http://127.0.0.1/backend/recipe_tree.php/;
         }
 
         # SPA fallback for other routes
