Proxy recipe tree to Node service

--- a/nginx.conf
+++ b/nginx.conf
@@ -42,9 +42,9 @@ http {
             add_header Cache-Control "public, max-age=2592000, stale-while-revalidate=2592000";
         }
 
-        # Route recipe tree API through PHP proxy
+        # Route recipe tree API through Node service
         location /recipe-tree/ {
-            proxy_pass http://127.0.0.1/backend/recipe_tree.php/;
+            proxy_pass http://localhost:<puerto>/backend/api/recipeTree.js;
         }
 
         # SPA fallback for other routes
