--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jobs": "node backend/jobs/index.js",
     "test": "npm --prefix packages/recipe-nesting run build && node tests/dones-worker.test.mjs && node tests/price-helper-map.test.mjs && node tests/recipe-nesting-map.test.mjs && node tests/recipe-nesting-cycle.test.mjs && node tests/recipe-nesting-guildupgrade.test.mjs && node tests/recipe-tree-cache.test.mjs && node tests/recipeTree.test.js && node tests/check-assets.mjs",
     "build:packages": "npm --prefix packages/recipe-nesting run build && npm --prefix packages/recipe-calculation run build",
-    "postbuild": "node scripts/update-html.js"
+    "postbuild": "node scripts/update-html.js",
+    "check-assets": "node scripts/check-assets.js"
   },
   "dependencies": {
     "mongodb": "^6.5.0",
