feat: add release deployment script and update Nginx root

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
     server {
         listen 80;
         server_name example.com;
-        root /var/www/html;
+        root /var/www/gw2/current;
 
         # Política de íconos: los íconos se descargan desde la CDN de ArenaNet
         # o pueden servirse desde este servidor ajustando las URLs.
