--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "npm --prefix packages/recipe-nesting run build && node tests/dones-worker.test.mjs && node tests/price-helper-map.test.mjs && node tests/recipe-nesting-map.test.mjs && node tests/recipe-nesting-cycle.test.mjs && node tests/recipe-nesting-guildupgrade.test.mjs && node tests/recipe-tree-cache.test.mjs && node tests/recipeTree.test.js && node tests/check-assets.mjs",
     "build:packages": "npm --prefix packages/recipe-nesting run build && npm --prefix packages/recipe-calculation run build",
     "postbuild": "node scripts/update-html.js",
-    "check-assets": "node scripts/check-assets.js"
+    "check-assets": "node scripts/check-assets.js",
+    "bump:cache": "bash scripts/bump-cache-version.sh",
+    "purge:cdn": "node scripts/purge-cdn.js"
   },
   "dependencies": {
     "mongodb": "^6.5.0",
