--- a/packages/recipe-calculation/tsconfig.json
+++ b/packages/recipe-calculation/tsconfig.json
@@ -13,7 +13,7 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "incremental": true,
+    "incremental": false,
 
     // Type-Checking Options
     "lib": ["esnext"],
