--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,16 @@ http {
             default_type application/javascript;
         }
 
+        # Do not cache files under /static/current/
+        location ^~ /static/current/ {
+            add_header Cache-Control "no-cache, must-revalidate";
+        }
+
+        # Strong cache for versioned static files
+        location ~ ^/static/[^/]+/ {
+            add_header Cache-Control "public, max-age=31536000, immutable";
+        }
+
         # Cache static assets for 30 days
         location ~* \.(js|css|png|mp4)$ {
             expires 30d;
