--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,10 @@ jobs:
       - run: rm -rf dist/js dist/manifest.json
       - run: npm run build
       - run: npm run check-assets
+      - uses: actions/upload-artifact@v4
+        with:
+          name: assets-report
+          path: assets-report.json
       - run: npm run check-workers
       - uses: actions/upload-artifact@v4
         with:
