--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,10 @@ http {
         server_name example.com;
         root /var/www/gw2/current;
 
+        # The CDN is expected to honor the Cache-Control headers from this origin
+        # configuration. Any CDN-side caching rules that override these headers
+        # should remain disabled so that the policies below take effect.
+
         # Política de íconos: los íconos se descargan desde la CDN de ArenaNet
         # o pueden servirse desde este servidor ajustando las URLs.
 
@@ -39,11 +43,13 @@ http {
         # Do not cache files under /static/current/
         location ^~ /static/current/ {
             add_header Cache-Control "no-cache, must-revalidate";
+            expires -1;
         }
 
         # Strong cache for versioned static files
         location ~ ^/static/[^/]+/ {
             add_header Cache-Control "public, max-age=31536000, immutable";
+            expires 1y;
         }
 
         # Cache static assets for 30 days
