--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,21 @@ http {
         application/javascript js mjs;
     }
 
+    # Log format for tracking legacy paths and 404 responses
+    log_format legacy '$remote_addr - $remote_user [$time_local] "$request" $status "$http_referer" "$http_user_agent"';
+
+    # Flag 404 responses for dedicated logging
+    map $status $log_404 {
+        default 0;
+        404 1;
+    }
+
+    # Flag accesses to legacy routes such as /dist/
+    map $request_uri $log_legacy {
+        default 0;
+        ~^/dist/ 1;
+    }
+
     server {
         listen 80;
         server_name example.com;
@@ -68,5 +83,9 @@ http {
             add_header Cache-Control "no-cache";
             try_files $uri $uri/ /index.html;
         }
+
+        # Dedicated access logs for legacy routes and 404 errors
+        access_log /var/log/nginx/legacy.log legacy if=$log_legacy;
+        access_log /var/log/nginx/404.log legacy if=$log_404;
     }
 }
