feat: rewrite hashed js redirects

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,9 @@ http {
 
         # Return 404 for missing files under /dist/js
         location ^~ /dist/js/ {
+            # BEGIN legacy hashed js
+            rewrite ^/dist/js/(.+)\.[0-9a-fA-F]+\.min\.js$ /static/current/js/$1.min.js permanent;
+            # END legacy hashed js
             try_files $uri =404;
             default_type application/javascript;
             error_page 404 = @js404;
