--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,8 +5,25 @@ on:
     branches: [ main ]
 
 jobs:
+  verify-bundles:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+      - run: npm ci
+      - run: npm run build:packages
+      - run: rollup -c
+      - run: node scripts/verify-bundles.js
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dist-manifest
+          path: dist/manifest.json
   build:
     runs-on: ubuntu-latest
+    needs: verify-bundles
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
